--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                                 </tr>
                                 <tr>
                                     <td>20:00〜20:45</td>
-                                    <td>セッション2:  私のGitの使い方（うらがみさん）</td>
+                                    <td>セッション2: 目指せ脱初心者-現場で使える実践Git（うらがみさん）</td>
                                 </tr>
                                 <tr>
                                     <td>20:45〜21:00</td>
